package com.uca.dss20192020.hotelprojectclientwebservice.Enum;

import java.io.Serializable;

public enum RoomStatus implements Serializable {
    FREE,
    OCCUPIED,
    RESERVED
}
