package com.uca.dss20192020.hotelprojectclientwebservice.Enum;

public enum UserRoles {
    CLIENT,
    ADMIN
}
